GearsetPOC/force-app/main/default/objects/FAQ_QuickLinks__c/FAQ_QuickLinks__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A list of URLs displayed on the side bar on the FAQ pages</description>
    <label>FAQ QuickLinks</label>
</CustomObject>