GearsetPOC/force-app/main/default/objects/FAQ_QuickLinks__c/fields/E4A__c.field-meta.xml
<CustomField>
    <fullName>E4A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E4A</label>
    <type>Checkbox</type>
</CustomField>