GearsetPOC/force-app/main/default/objects/FAQ_QuickLinks__c/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <label>url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>