GearsetPOC/force-app/main/default/objects/FAQ_QuickLinks__c/fields/url_DE__c.field-meta.xml
<CustomField>
    <fullName>url_DE__c</fullName>
    <label>url_DE</label>
    <type>Url</type>
</CustomField>