GearsetPOC/force-app/main/default/objects/FAQ_QuickLinks__c/fields/url_FR__c.field-meta.xml
<CustomField>
    <fullName>url_FR__c</fullName>
    <label>url_FR</label>
    <type>Url</type>
</CustomField>