GearsetPOC/force-app/main/default/objects/FAQ_QuickLinks__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>English_Text__c</columns>
    <columns>French_Text__c</columns>
    <columns>Dutch_Text__c</columns>
    <columns>German_Text__c</columns>
    <columns>url_UK__c</columns>
    <columns>url_FR__c</columns>
    <columns>url_NL__c</columns>
    <columns>url_DE__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>